<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/bili_2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/kappu_2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/bili_3"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/bili_4"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_bg"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp"
            android:text="@string/bili_5"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id_test" />

</RelativeLayout>