<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".ui.ListActivity">

    <RelativeLayout
        android:id="@+id/pamaContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/pama"
            android:layout_toLeftOf="@+id/pama"
            android:text="@string/pa"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/pama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textOff="@string/ma"
            android:textOn="@string/ma" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/pama"
            android:layout_toRightOf="@+id/pama"
            android:text="@string/ma"
            android:textColor="@color/white" />


    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shruthi_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/player_area"
        android:layout_below="@+id/pamaContainer" />

    <RelativeLayout
        android:id="@+id/player_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:background="#000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/shruthi_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/play_pause"
            android:layout_toLeftOf="@+id/play_pause"
            android:gravity="center"
            android:text="@string/bili_2"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/pause" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>